--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <a href="./index.html">OPEN</a>
+      <a href="./reactwebproject/index.html">OPEN</a>
     </main>
     <script src="index.js"></script>
   </body>
